<!--
  ~  Copyright (C) 2018 The Android Open Source Project
  ~
  ~  Author: Gehad Ahmed
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~
  -->

<resources>
    <string name="app_name">Book Store 1</string>

    <string name="Title_bookName">Book Name*:</string>
    <string name="hint_bookName">Book Name</string>

    <string name="Title_bookPrice">Book Price (USD)*:</string>
    <string name="hint_bookPrice">Book Price in USD</string>

    <string name="Title_bookQuantity">Book Quantity*:</string>
    <string name="hint_bookQuantity">Book Quantity</string>

    <string name="Title_bookSupp">Book Supplier:</string>
    <string name="hint_bookSupp">Book Supplier</string>

    <string name="Title_bookSuppPhone">Book Supplier Phone:</string>
    <string name="hint_bookSuppPhone">Book Supplier Phone</string>

    <string name="hint_main">* Mandatory Fields</string>

    <string name="EditorActivityLabel">Add Book</string>

    <string name="action_save">save</string>
    <string name="action_delete">delete</string>

    <string name="action_insert_dummy_data">Insert Data</string>

    <!--As setText method doesn't accept concatenation, the "%1$h" is an argument type integer
    will be replaced by getCount value and formatted as Bold-->
    <string name="TextView_header">The books table contains <b>%1$h</b> books.\n\n</string>
    <string name="table_header"><b>ID  -  Name  -  Price  -  Quantity  -  Supplier Name  -
        Supplier Phone\n</b></string>
</resources>
