<?xml version="1.0" encoding="utf-8"?>
<!--
  ~  Copyright (C) 2018 The Android Open Source Project
  ~
  ~  Author: Gehad Ahmed
  ~
  ~  Licensed under the Apache License, Version 2.0 (the "License");
  ~  you may not use this file except in compliance with the License.
  ~  You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/both_activities_background">

    <EditText
        android:id="@+id/bookNameEdit"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookName"
        android:inputType="textCapWords"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/bookNameTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bookNameTitle"
        app:layout_constraintTop_toTopOf="@+id/bookNameTitle" />

    <TextView
        android:id="@+id/bookNameTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/Title_bookName"
        style="@style/EditActivityTitles"
        app:layout_constraintEnd_toStartOf="@+id/bookNameEdit"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bookPriceEdit"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookPrice"
        android:inputType="numberDecimal"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/bookPriceTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookPriceTitle"
        app:layout_constraintTop_toTopOf="@+id/bookPriceTitle" />

    <TextView
        android:id="@+id/bookPriceTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookPrice"
        style="@style/EditActivityTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookNameTitle" />

    <EditText
        android:id="@+id/bookQuantityEdit"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookQuantity"
        android:inputType="number"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/bookQuantityTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookQuantityTitle"
        app:layout_constraintTop_toTopOf="@+id/bookQuantityTitle"
        app:layout_constraintVertical_bias="0.526" />

    <TextView
        android:id="@+id/bookQuantityTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookQuantity"
        style="@style/EditActivityTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookPriceTitle" />

    <EditText
        android:id="@+id/bookSuppEdit"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookSupp"
        android:inputType="textCapWords"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/bookSuppTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookSuppTitle"
        app:layout_constraintTop_toTopOf="@+id/bookSuppTitle" />

    <TextView
        android:id="@+id/bookSuppTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookSupp"
        style="@style/EditActivityTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookQuantityTitle" />

    <EditText
        android:id="@+id/bookSuppPhoneEdit"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="8dp"
        android:hint="@string/hint_bookSuppPhone"
        android:inputType="phone"
        style="@style/EditTextStyle"
        app:layout_constraintBottom_toBottomOf="@+id/bookSuppPhoneTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bookSuppPhoneTitle"
        app:layout_constraintTop_toTopOf="@+id/bookSuppPhoneTitle" />

    <TextView
        android:id="@+id/bookSuppPhoneTitle"
        android:layout_marginStart="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/Title_bookSuppPhone"
        style="@style/EditActivityTitles"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSuppTitle" />

    <TextView
        android:id="@+id/main_hint"
        style="@style/main_hint"
        android:layout_marginEnd="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/hint_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bookSuppPhoneEdit" />
</android.support.constraint.ConstraintLayout>